--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="script.js"></script>
+        <script defer src="script.js"></script>
     </head>
     <body>
-        Hi!
+        <div class="user-choice">
+            <button id = "rock">Rock!</button>
+            <button id = "paper">Paper!</button>
+            <button id = "scissors">Scissors!</button>
+        </div>
+        <div id="results">
+            <p id="round-winner"></p>
+            <p id="running-score"></p>
+        </div>
     </body>
 </html>
